name:                passenger-check
version:             0.1.0.0
synopsis:            Checks the status of Passenger instances for Nagios
description:
license:             MIT
license-file:        LICENSE
author:              Justin Leitgeb
maintainer:          justin@stackbuilders.com
copyright:           2015 Stack Builders Inc.
category:            System
build-type:          Simple
extra-source-files:  spec/fixtures/*.txt
cabal-version:       >=1.10

executable passenger-check
  main-is:             Main.hs

  other-modules:         System.PassengerCheck.Parse
                       , System.PassengerCheck.Types

  -- other-extensions:
  build-depends:         base >=4.5 && <4.8
                       , nagios-check >= 0.2.0 && < 0.3
                       , parsec >= 3.1.0 && <= 3.2
                       , process
                       , text

  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite passenger-check-test
  type: exitcode-stdio-1.0
  hs-source-dirs: spec, src
  main-is: Spec.hs
  build-depends:       base >=4.5 && <4.8

                       -- Copied from main build
                       , nagios-check >= 0.2.0 && < 0.3
                       , parsec >= 3.1.0 && <= 3.2
                       , process
                       , text

                       , hspec

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stackbuilders/passenger-check
